# Cinema_Manager_TPPE

./: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.prod  Dockerfile.test  Onde Encontrar a Documentação.txt  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
TP1/src/: ControleLojista.java
TP3/.metadata/: version.ini
TP3/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
TP3/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
TP3/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
TP3/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
TP4/KinoDerToten/: .project
TP4/KinoDerToten/.metadata/: version.ini
TP4/teste/src/: Teste.java  testao.java  testinho.java
TP5/KinoDerToten/doc/: allclasses-index.html  allpackages-index.html  deprecated-list.html  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  type-search-index.js
TPs Antigos/TP1/src/: ControleLojista.java
app/: __init__.py  database.py  enums.py  main.py  models.py  routers.py  schemas.py
app/models/: __init__.py  cinema.py  filme.py  ingresso.py  models.py  pessoa.py  sessao.py
app/repository/: filme.py  ingresso.py  pessoa.py  sessao.py
app/routers/: __init__.py  cinema.py  filme.py  ingresso.py  pessoa.py  sessao.py
app/routes/: filme.py
app/schemas/: __init__.py  cinema.py  filme.py  ingresso.py  pessoa.py  schemas.py  sessao.py
tests/: conftest.py  test_cinema.py  test_filmes.py  test_ingresso.py  test_main.py  test_pessoa.py  test_sessao.py  tests_main.py
(+141 files in other folders)
