[project]
name = "cinema-manager"
version = "0.1.0"
description = "A REST API for managing cinema operations including movies, sessions, tickets, and people"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.7",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
